[GTK] Embedded GtkWidgets are not drawn https://bugs.webkit.org/show_bug.cgi?id=63451

Source/WebCore:

Remove widget from it's parent container when GtkPluginWidget is destroyed.
Remove paint() method because real expose even is used for drawing child widgets now.

Patch by Dan Vrátil  <dvratil@redhat.com>, Milan Crha <mcrha@redhat.com> on 2012-02-08
Reviewed by Martin Robinson.

* platform/gtk/GtkPluginWidget.cpp:
(WebCore::GtkPluginWidget::~GtkPluginWidget):
(WebCore):
* platform/gtk/GtkPluginWidget.h:
(GtkPluginWidget):

Source/WebKit/gtk:

Insert plugin widgets to WebKitWebView container as it's children.
Chain up to parent in webkit_web_view_draw() to ensure the child widgets are drawn.

Patch by Dan Vrátil  <dvratil@redhat.com>, Milan Crha <mcrha@redhat.com> on 2012-02-08
Reviewed by Martin Robinson.

* WebCoreSupport/FrameLoaderClientGtk.cpp:
(WebKit::FrameLoaderClient::createPlugin):
* webkit/webkitwebview.cpp:
(webkit_web_view_draw):

Canonical link: https://commits.webkit.org/95154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107249 268f45cc-cd09-0410-ab3c-d52691b4dbfc