Source/WebCore/platform/gtk/GtkPluginWidget.cpp
@@ -41,6 +41,11 @@ GtkPluginWidget::GtkPluginWidget(GtkWidget* widget)
     gtk_widget_hide(widget);
 }
 
+GtkPluginWidget::~GtkPluginWidget()
+{
+    gtk_container_remove(GTK_CONTAINER(gtk_widget_get_parent(platformWidget())), platformWidget());
+}
+
 void GtkPluginWidget::invalidateRect(const IntRect& coreRect)
 {
     /* no need to */
@@ -64,51 +69,6 @@ void GtkPluginWidget::frameRectsChanged()
     gtk_widget_set_size_request(platformWidget(), rect.width(), rect.height());
     gtk_widget_size_allocate(platformWidget(), &allocation);
     gtk_widget_show(platformWidget());
-}
-
-void GtkPluginWidget::paint(GraphicsContext* context, const IntRect& rect)
-{
-    if (!context->gdkExposeEvent())
-        return;
-
-    /* only paint widgets with no window this way */
-    if (gtk_widget_get_has_window(platformWidget()))
-        return;
-
-    GtkWidget* widget = platformWidget();
-    ASSERT(!gtk_widget_get_has_window(widget));
-
-    GdkEvent* event = gdk_event_new(GDK_EXPOSE);
-    event->expose = *context->gdkExposeEvent();
-    event->expose.area = static_cast<GdkRectangle>(rect);
-
-    IntPoint loc = parent()->contentsToWindow(rect.location());
-
-    event->expose.area.x = loc.x();
-    event->expose.area.y = loc.y();
-
-#ifdef GTK_API_VERSION_2
-    event->expose.region = gdk_region_rectangle(&event->expose.area);
-#else
-    event->expose.region = cairo_region_create_rectangle(&event->expose.area);
-#endif
-
-    /*
-     * This will be unref'ed by gdk_event_free.
-     */
-    g_object_ref(event->expose.window);
-
-    /*
-     * If we are going to paint do the translation and GtkAllocation manipulation.
-     */
-#ifdef GTK_API_VERSION_2
-    if (!gdk_region_empty(event->expose.region))
-#else
-    if (!cairo_region_is_empty(event->expose.region))
-#endif
-        gtk_widget_send_expose(widget, event);
-
-    gdk_event_free(event);
 }
 
 }
