Source/WebCore/platform/gtk/GtkPluginWidget.h
@@ -33,9 +33,9 @@ namespace WebCore {
     class GtkPluginWidget : public Widget {
     public:
         GtkPluginWidget(GtkWidget*);
+        virtual ~GtkPluginWidget();
         void invalidateRect(const IntRect&);
         void frameRectsChanged();
-        void paint(GraphicsContext*, const IntRect&);
     };
 }
 
